Fixed footer, header, and spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,27 @@ body {
   background-color: #dbc4dd;
   color: rgb(0, 0, 0);
   font-size: 16px;
-  line-height: 20px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
 }
 
+#pageMain {
+  flex-grow: 1;
+}
+
 a {
   color: rgb(0, 119, 255);
+  box-sizing: border-box;
 }
 
 .header {
   width: 100%;
   height: auto;
-  padding: 2%;
+  margin: 0;
+  padding: 0;
   margin: 0%;
   background-color: #333;
   color: #ffffff;
@@ -43,6 +51,7 @@ a {
   padding-top: 10px;
   margin-left: 30px;
   margin-right: 30px;
+  text-align: left;
 }
 
 .skills {
@@ -50,6 +59,7 @@ a {
   margin-right: 30px;
   margin-left: 30px;
   column-count: 2;
+  text-align: left;
 }
 
 .resources {
@@ -60,17 +70,19 @@ a {
   padding: 30px;
   float: none;
   display: inline-block;
-  text-align: center;
+  text-align: justify;
   list-style: none;
   font-weight: 400;
 }
 
 footer {
-  position: relative;
   bottom: 0;
   width: 100%;
+  height: 40px;
   text-align: center;
   background-color: #dbc4dd;
+  align-items: center;
+  justify-content: center;
 }
 
 .divider {
@@ -92,16 +104,19 @@ footer {
 .experience {
   margin-left: 30px;
   margin-right: 30px;
+  text-align: left;
 }
 
 .education {
   margin-left: 30px;
   margin-right: 30px;
+  text-align: left;
 }
 
 .hobbies {
   margin-left: 30px;
   margin-right: 30px;
+  text-align: left;
 }
 
 .navigationBar {
